--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-USERS_API_URL=http://127.0.0.1:8080/v1/users/
-ARTICLES_API_URL==http://127.0.0.1:8081/v1/articles/
+DEV_USERS_URL=http://127.0.0.1:8080/v1/users/
+DEV_ARTICLES_URL=http://127.0.0.1:8081/v1/articles/
+PRO_USERS_URL=/v1/users/
+ARTICLES_URL=/v1/articles/
