--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,21 @@
 server {
-    listen       3000;
+    listen 3000;
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri /index.html;
+    }
+
+    location /v1/articles/ {
+        proxy_pass http://articles:8001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /v1/users/ {
+        proxy_pass http://users:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
