Adding initial CI using Github actions

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,13 @@ server {
         try_files $uri /index.html;
     }
 
-    location /v1/articles/ {
+    location /v1/articles {
         proxy_pass http://articles:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /v1/users/ {
+    location /v1/users {
         proxy_pass http://users:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
