--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_ARTICLES_API_URL=http://127.0.0.1:8001
 REACT_APP_USERS_API_URL=http://127.0.0.1:8000
 REACT_APP_DEBUG=true
+REACT_APP_ENV=development
