--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Adjust to your main branch name
+      - development  # Adjust to your main branch name
 
 jobs:
   build:
