--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,28 +1,82 @@
-name: Build and Push Docker Image
+name: Client Service and PostgreSQL CI/CD
 
 on:
   push:
     branches:
-      - main  # Adjust to your main branch name
-      - development  # Adjust to your main branch name
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
 
-      - name: Build and push Docker image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build --build-arg REACT_APP_ENV=docker -t antonyinjila/notelify-client-service:latest .
-          docker push antonyinjila/notelify-client-service:latest  
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Build React App
+      run: npm run build
+
+    - name: Test
+      run: npm test
+
+  build-and-push-docker:
+    runs-on: ubuntu-latest
+
+    needs: [test]
+    test:
+      runs-on: ubuntu-latest
+      steps:
+        -
+          name: Checkout
+          uses: actions/checkout@v3
+        -
+          name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+        -
+          name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+        -
+          name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PAT }}
+        -
+          name: Build and push
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            push: true
+            tags: antonyinjila/notelify-client-service:latest
+
+
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+
+  #   needs: [build-and-push-docker]
+
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
+
+  #   - name: Set up Go
+  #     uses: actions/setup-go@v2
+  #     with:
+  #       go-version: 1.17
+
+  #   - name: Deploy to production
+  #     run: ./bin/my-web-server
+  #     env:
+  #       DATABASE_URL: postgres://myuser:mypassword@localhost:5432/mydatabase
