--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,33 +32,30 @@ jobs:
 
   build-and-push-docker:
     runs-on: ubuntu-latest
-
     needs: [test]
-    test:
-      runs-on: ubuntu-latest
-      steps:
-        -
-          name: Checkout
-          uses: actions/checkout@v3
-        -
-          name: Set up QEMU
-          uses: docker/setup-qemu-action@v3
-        -
-          name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-        -
-          name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PAT }}
-        -
-          name: Build and push
-          uses: docker/build-push-action@v5
-          with:
-            context: .
-            push: true
-            tags: antonyinjila/notelify-client-service:latest
+   
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PAT }}
+        
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: antonyinjila/notelify-client-service:latest
 
 
 
