--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-name: Client Service and PostgreSQL CI/CD
+
+name: React CI/CD
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
     branches:
       - main
 
@@ -30,50 +28,15 @@ jobs:
     - name: Test
       run: npm test
 
-  build-and-push-docker:
-    runs-on: ubuntu-latest
-    needs: [test]
-   
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PAT }}
-        
-    - name: Build and push
-      uses: docker/build-push-action@v5
+    - name: Build Docker Image
+      uses: docker/build-push-action@v2
       with:
         context: .
+        file: Dockerfile
         push: true
-        tags: antonyinjila/notelify-client-service:latest
-
-
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-
-  #   needs: [build-and-push-docker]
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v2
-
-  #   - name: Set up Go
-  #     uses: actions/setup-go@v2
-  #     with:
-  #       go-version: 1.17
-
-  #   - name: Deploy to production
-  #     run: ./bin/my-web-server
-  #     env:
-  #       DATABASE_URL: postgres://myuser:mypassword@localhost:5432/mydatabase
+        tags: |
+          push antonyinjila/notelify-client-service:latest
+          push antonyinjila/notelify-client-service:latest
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PAT }}
