Major changes in design

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,14 +7,32 @@ server {
         try_files $uri /index.html;
     }
 
-    location /v1/articles {
-        proxy_pass http://articles:8001;
+    upstream users_backend {
+        server users:8000;
+    }
+
+    upstream posts_backend {
+        server posts:8001;
+    }
+
+    upstream logger_backend {
+        server logger:8002;
+    }
+
+    location /users/v1 {
+        proxy_pass http://users_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /v1/users {
-        proxy_pass http://users:8000;
+    location /posts/v1 {
+        proxy_pass http://posts_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /logger/v1 {
+        proxy_pass http://logger_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
