Bug fixing the nginx file upstream servers

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,32 +7,32 @@ server {
         try_files $uri /index.html;
     }
 
-    upstream users_backend {
+    upstream users {
         server users:8000;
     }
 
-    upstream posts_backend {
+    upstream posts {
         server posts:8001;
     }
 
-    upstream logger_backend {
+    upstream logger {
         server logger:8002;
     }
 
     location /users/v1 {
-        proxy_pass http://users_backend;
+        proxy_pass http://users:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /posts/v1 {
-        proxy_pass http://posts_backend;
+        proxy_pass http://logger:8002;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
     location /logger/v1 {
-        proxy_pass http://logger_backend;
+        proxy_pass http://logger:8002;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
