--- a/nginx.conf
+++ b/nginx.conf
@@ -7,17 +7,6 @@ server {
         try_files $uri /index.html;
     }
 
-    upstream users {
-        server users:8000;
-    }
-
-    upstream posts {
-        server posts:8001;
-    }
-
-    upstream logger {
-        server logger:8002;
-    }
 
     location /users/v1 {
         proxy_pass http://users:8000;
@@ -26,7 +15,7 @@ server {
     }
 
     location /posts/v1 {
-        proxy_pass http://logger:8002;
+        proxy_pass http://posts:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
